--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wordpress-org-mcp-server",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "MCP server for WordPress.org plugin analysis and comparison",
   "main": "dist/index.js",
   "bin": {
@@ -21,6 +21,14 @@
   "keywords": ["mcp", "wordpress", "plugin", "analysis"],
   "author": "Your Name",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/juanma-wp/wordpress-org-mcp.git"
+  },
+  "homepage": "https://github.com/juanma-wp/wordpress-org-mcp",
+  "bugs": {
+    "url": "https://github.com/juanma-wp/wordpress-org-mcp/issues"
+  },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
     "node-fetch": "^3.3.2",
