--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "start": "node dist/index.js",
+    "lint": "echo 'No linting configured'",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
